<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Título -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_perfil"
            android:textSize="26sp"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:textColor="@color/black"
            android:layout_marginBottom="36dp" />

        <ImageView
            android:id="@+id/ivFotoPerfil"
            android:layout_width="134dp"
            android:layout_height="127dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edittext"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_perfil" />

        <Button
            android:id="@+id/btnCambiarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_foto"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"/>


        <!-- Nombre -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="30dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_person"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:hint="@string/c_nombre"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                />
        </LinearLayout>

        <!-- Teléfono -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="30dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_phone"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/et_telefono"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/c_telefono"
                android:inputType="phone"
                android:padding="10dp"
                android:background="@drawable/bg_edittext"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Correo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="30dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_email"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/et_correo"
                android:layout_width="571dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:hint="@string/c_correo"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Botón Guardar -->
        <Button
            android:id="@+id/btnGuardarCambios"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/turquoise"
            android:padding="12dp"
            android:text="@string/g_cambios"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            />
    </LinearLayout>
</ScrollView>
