<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="32dp">

        <!-- Imagen de perfil -->
        <ImageView
            android:id="@+id/imgPerfil"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="46dp"
            android:src="@drawable/ic_perfil"
            android:scaleType="centerCrop"
            android:padding="4dp" />

        <!-- Nombre -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nombre"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/tv_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="18sp"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Correo -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Correo"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_email" />

            <TextView
                android:id="@+id/tv_correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textSize="18sp"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Teléfono -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Teléfono"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="32dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_phone" />

            <TextView
                android:id="@+id/tv_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero"
                android:textSize="18sp"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Botón -->
        <Button
            android:id="@+id/bt_eperfil"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/turquoise"
            android:padding="12dp"
            android:text="@string/e_perfil"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
