<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productos"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:fontFamily="serif"
            android:layout_gravity="center"
            android:paddingBottom="12dp"/>

        <!-- Contenedor de productos en Grid -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:padding="8dp"
            android:layout_gravity="center">

            <!-- Producto 1 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:padding="8dp"
                android:gravity="center"
                android:background="@color/white"
                android:layout_margin="8dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/im_vela"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/velas"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingTop="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d_vela"
                    android:textSize="12sp"
                    android:paddingTop="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p_vela"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:paddingTop="2dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_carrito"
                    android:textSize="12sp"
                    android:backgroundTint="@color/turquoise"
                    android:textColor="@color/white"
                    android:layout_marginTop="4dp"/>

            </LinearLayout>

            <!-- Producto 2 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:padding="8dp"
                android:gravity="center"
                android:background="@color/white"
                android:layout_margin="8dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/im_vela"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cafe"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingTop="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d_cafe"
                    android:textSize="12sp"
                    android:paddingTop="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p_vela"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:paddingTop="2dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_carrito"
                    android:textSize="12sp"
                    android:backgroundTint="@color/turquoise"
                    android:textColor="@color/white"
                    android:layout_marginTop="4dp"/>

            </LinearLayout>

        </GridLayout>
                <!-- Contenedor de productos en Grid -->
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="2"
                    android:padding="8dp"
                    android:layout_gravity="center">

                    <!-- Producto 3 -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:gravity="center"
                        android:background="@color/white"
                        android:layout_margin="8dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/im_vela"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/velas"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:paddingTop="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/d_vela"
                            android:textSize="12sp"
                            android:paddingTop="2dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/p_vela"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:paddingTop="2dp"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/a_carrito"
                            android:textSize="12sp"
                            android:backgroundTint="@color/turquoise"
                            android:textColor="@color/white"
                            android:layout_marginTop="4dp"/>

                    </LinearLayout>

                    <!-- Producto 4 -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:gravity="center"
                        android:background="@color/white"
                        android:layout_margin="8dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/im_vela"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cafe"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:paddingTop="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/d_cafe"
                            android:textSize="12sp"
                            android:paddingTop="2dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/p_vela"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:paddingTop="2dp"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/a_carrito"
                            android:textSize="12sp"
                            android:backgroundTint="@color/turquoise"
                            android:textColor="@color/white"
                            android:layout_marginTop="4dp"/>

                    </LinearLayout>
                </GridLayout>
            </LinearLayout>
</ScrollView>

